--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login - Dashboard</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    Teste
+<body class="login-bg">
+  <div class="login-container fade-in">
+    <div class="login-card">
+      <h1>Bem-vindo</h1>
+      <p>Faça login para acessar o painel</p>
+      <form id="loginForm">
+        <input type="text" id="username" placeholder="Usuário" required>
+        <input type="password" id="password" placeholder="Senha" required>
+        <button type="submit">Entrar</button>
+      </form>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
