--- a/index.html
+++ b/index.html
@@ -3,20 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Dashboard</title>
+  <title>DATEXTRACT Platform - Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="login-bg">
-  <div class="login-container fade-in">
-    <div class="login-card">
-      <h1>Bem-vindo</h1>
-      <p>Faça login para acessar o painel</p>
+<body class="login-dark">
+  <div class="login-wrapper fade-in">
+
+    <div class="login-card glass-card">
+      <div class="logo-container">
+        <img src="logo.jpg" alt="DATEXTRACT Logo" class="logo-img">
+      </div>
+
+      <h1>Bem-vindo à Plataforma</h1>
+      <p class="subtitle">Acesse sua conta para continuar</p>
+
       <form id="loginForm">
-        <input type="text" id="username" placeholder="Usuário" required>
-        <input type="password" id="password" placeholder="Senha" required>
-        <button type="submit">Entrar</button>
+        <div class="input-group">
+          <input type="text" id="username" placeholder="Usuário" required>
+        </div>
+        <div class="input-group">
+          <input type="password" id="password" placeholder="Senha" required>
+        </div>
+        <button type="submit" class="btn-gradient">Entrar</button>
       </form>
+
+      <p class="footer-text">© 2025 DATEXTRACT Platform</p>
     </div>
+
   </div>
 
   <script src="script.js"></script>
