feat: link do BI

--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
       <h2>📈 Dashboard de Vendas</h2>
     </div>
     <div class="navbar-right">
-      <a href="https://app.powerbi.com/view?r=SEU-LINK-AQUI" target="_blank" class="btn-extrair">
+      <a href="https://acadcruzeirodosul-my.sharepoint.com/:u:/g/personal/ryan_victor_cs_unicid_edu_br/EQEK7Fhk4ulMskjfbJXaZpEBPIu58sTKKYYKi3_EjGJvYg?e=NiCzUn" target="_blank" class="btn-extrair">
         <i class="fas fa-database"></i> Extrair Dados
       </a>
     </div>
